--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -13,8 +13,7 @@
 }
 .cardHome {
   background-color: yellow;
-  height: 40vh;
-  width: 50vw;
+  background-size: cover;
   text-align: center;
   color: red;
   border-radius: 10px;
@@ -23,7 +22,6 @@
   padding: 50px;
   font-family: 'sans-serif';
   font-size: 20px;
-
 }
 .button {
   background-color: green;
@@ -33,4 +31,27 @@
   width: 10vw;
   border-radius: 5px;
   border-width: 0px;
+}
+
+@media screen and (min-width: 200px) and (max-width: 950px) {
+  .cardHome {
+    background-color: yellow;
+    background-size: cover;
+    text-align: center;
+    color: red;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: green;
+    padding: 50px;
+    font-family: 'sans-serif';
+    font-size: 20px;
+  }
+  .button {
+    background-color: green;
+    color: white;
+    height: 30px;
+    width: 30vw;
+    border-radius: 5px;
+    border-width: 0px;
+  }
 }
